kubernetes/pipeline.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: europe-west1-docker.pkg.dev/timemanager-330510/pr-ftw-repo/time-manager-api
          ports:
            - containerPort: 4000
          resources:
            requests:
              memory: 512Mi
              cpu: 125m
            limits:
              memory: 512Mi
              cpu: 250m

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: europe-west1-docker.pkg.dev/timemanager-330510/pr-ftw-repo/time-manager-front
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 512Mi
              cpu: 125m
            limits:
              memory: 512Mi
              cpu: 250m
