kubernetes/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: europe-west1-docker.pkg.dev/timemanager-330510/pr-ftw-repo/time-manager-api:1.0
          ports:
            - containerPort: 4000
          resources:
            requests:
              memory: 512Mi
              cpu: 125m
            limits:
              memory: 512Mi
              cpu: 250m

---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: LoadBalancer
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
