kubernetes/psql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psql-deployment
  labels:
    app: psql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psql
  template:
    metadata:
      labels:
        app: psql
    spec:
      containers:
        - name: postgresql
          image: postgres:14-alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: 512Mi
              cpu: 125m
            limits:
              memory: 512Mi
              cpu: 250m

---
apiVersion: v1
kind: Service
metadata:
  name: psql-service
spec:
  selector:
    app: psql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
